--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,2 @@
-all:
-	g++ HelloFastCGI.cpp -O2 -fPIC -lfastcgi-daemon2 -shared -o libHelloFastCGI.so && \
-	cp libHelloFastCGI.so /target
+all: HelloFastCGI.cpp
+	g++ HelloFastCGI.cpp -O2 -fPIC -lfastcgi-daemon2 -shared -o /target/libHelloFastCGI.so
