--- a/docker-fastcgi-daemon/Dockerfile
+++ b/docker-fastcgi-daemon/Dockerfile
@@ -31,6 +31,8 @@ RUN mkdir -p /tmp/build_fastcgi && cd /tmp/build_fastcgi && \
         ./libfastcgi2-syslog_${FCGI_VERSION}_amd64.deb \
     && cd /tmp && rm -rf /tmp/build_fastcgi
 
+RUN apt-get install -y mongodb-dev libmongo-client-dev libboost-filesystem-dev
+
 VOLUME ["/data", "/tmp/fastcgi"]
 WORKDIR "/data"
 CMD ["fastcgi-daemon2", "--config=fastcgi.conf"]
